# pipeline-od-vlm

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  main.py
pipeline-od-vlm/: README.md  pyproject.toml
pipeline-od-vlm/conf/base/: catalog.yml  parameters.yml  parameters_download_dataset.yml  parameters_download_model.yml  parameters_evaluate_metrics.yml  parameters_object_detection.yml  parameters_vision_language_model.yml
pipeline-od-vlm/src/pipeline_od_vlm/: __init__.py  __main__.py  pipeline_registry.py  settings.py
pipeline-od-vlm/src/pipeline_od_vlm/common/: base.py  factory.py  models.py
pipeline-od-vlm/src/pipeline_od_vlm/pipelines/download_dataset/: __init__.py  nodes.py  pipeline.py
pipeline-od-vlm/src/pipeline_od_vlm/pipelines/download_model/: __init__.py  nodes.py  pipeline.py
pipeline-od-vlm/src/pipeline_od_vlm/pipelines/evaluate_metrics/: __init__.py  nodes.py  pipeline.py
pipeline-od-vlm/src/pipeline_od_vlm/pipelines/object_detection/: __init__.py  models.py  nodes.py  pipeline.py
pipeline-od-vlm/src/pipeline_od_vlm/pipelines/vision_language_model/: __init__.py  models.py  nodes.py  pipeline.py  utils.py
pipeline-od-vlm/tests/pipelines/download_dataset/: test_pipeline.py
pipeline-od-vlm/tests/pipelines/download_model/: test_pipeline.py
pipeline-od-vlm/tests/pipelines/evaluate_metrics/: test_pipeline.py
pipeline-od-vlm/tests/pipelines/object_detection/: test_pipeline.py
pipeline-od-vlm/tests/pipelines/vision_language_model/: test_pipeline.py
